# ait

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aabt_solver.h  aclocal.m4  ait.pc.in  config.h.in  configure  configure.ac  index.html  libait-0.1.0.la  libait.pc.in  params.json
doc/: implementation.txt
m4/: boost.m4
src/: Makefile.am  Makefile.in  aabt-assignment.cpp  aabt-assignment.h  aabt-explanation.cpp  aabt-explanation.h  aabt-message.cpp  aabt-message.h  aabt-nogood.cpp  aabt-nogood.h  aabt-order.cpp  aabt-order.h  aabt-solver.cpp  aabt-solver.h  aabt-solver.hpp  aabt.pb.cc  aabt.pb.h  aabt.proto  aabt_solver.cpp  aabt_solver.h  abt-endpoint.cpp  abt-endpoint.h  abt-message.cpp  abt-message.h  abt-monitor.cpp  abt-monitor.h  abt-nogood.cpp  abt-nogood.h  abt-socket.cpp  abt-socket.h  abt-solver.cpp  abt-solver.h  abt-solver.hpp  abt.pb.cc  abt.pb.h  abt.proto  assignment.cpp  assignment.h  common-protocols.pb.cc  common-protocols.pb.h  (+20 more)
src/csp/: Makefile.am  Makefile.in  aabt-assignment.h  aabt-explanation.h  aabt-message.cpp  aabt-message.h  aabt-nogood.cpp  aabt-nogood.h  aabt-order.h  aabt-solver.cpp  aabt-solver.h  aabt.pb.cc  aabt.proto  aabt_precompiled.pb.cc  aabt_precompiled.pb.h  abt-endpoint.cpp  abt-message.cpp  abt-monitor.cpp  abt-monitor.h  abt-monitor.hpp  abt-nogood.cpp  abt-socket.cpp  abt-socket.h  abt-socket.hpp  abt-solver.cpp  abt-solver.h  abt-solver.hpp  abt.pb.cc  abt.pb.h  abt.proto  abt_precompiled.pb.cc  abt_precompiled.pb.h  abt_precompiled.proto  assignment.cpp  assignment.h  assignment.hpp  cc-abt-endpoint.cpp  cc-abt-message.cpp  cc-abt-nogood.cpp  cc-abt-solver.cpp  (+34 more)
src/csp/parser/: Makefile.am  Makefile.in  constraint-parameters.l  constraint-parameters.y  constraint-parameters_parse.cpp  constraint-parameters_parser.h  constraint-parameters_parser.hpp  constraint-parameters_parser.ih  constraint-parameters_parserbase.h  constraint-parameters_scanner.cpp  constraint-parameters_scanner.h  constraint-parameters_scanner.hpp  constraint-parameters_scanner.ih  constraint-parameters_scannerbase.h  constraint-scope.l  constraint-scope.y  constraint-scope_parse.cpp  constraint-scope_parser.hpp  constraint-scope_parser.ih  constraint-scope_parserbase.h  constraint-scope_scanner.cpp  constraint-scope_scanner.hpp  constraint-scope_scanner.ih  constraint-scope_scannerbase.h  domain.l  domain.y  domain_parse.cpp  domain_parser.h  domain_parser.hpp  domain_parser.ih  domain_parserbase.h  domain_scanner.backup.hpp  domain_scanner.cpp  domain_scanner.h  domain_scanner.hpp  domain_scanner.ih  domain_scannerbase.h  exp_func.cpp  exp_func.h  exp_func.hpp  (+76 more)
src/fuzzy/: Makefile.am  Makefile.in  function.cpp  function.hpp  implicated-mf.cpp  implicated-mf.hpp  io-base.cpp  io-base.hpp  membership-function.cpp  membership-function.hpp  operator.cpp  operator.hpp  rule.cpp  rule.hpp  triangular-imf.cpp  triangular-imf.hpp  triangular-mf.cpp  triangular-mf.hpp
test/: Makefile.am  Makefile.in  abt-monitor.cpp  fuzzy.cpp  fuzzy_functions.cpp  n-queen-abt-solver.cpp  n-queen-abt-solver.h  n-queens-problem.h  parser-test.cpp  xsp.cpp
test/utilities/: tokenizer.cpp  tokenizer.hpp
