ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4
AM_CPPFLAGS = -pipe
noinst_LTLIBRARIES = libait_csp_parser.la
ait_includedir = $(includedir)/ait/csp/parser
libait_csp_parser_la_SOURCES = \
		exp_func.cpp \
		exp_num.cpp \
		exp_ref.cpp \
		expression.cpp \
		domain_scanner.cpp \
		domain_parse.cpp \
		constraint-parameters_scanner.cpp \
		constraint-parameters_parse.cpp \
		parameters_scanner.cpp \
		parameters_parse.cpp \
		predicate-f_scanner.cpp \
		predicate-f_parse.cpp \
		xcsp-pskel.cxx \
		xinstance-parser.cpp \
		xpresentation-parser.cpp \
		xproblem-type-parser.cpp \
		xdomain-parser.cpp \
		xdomains-parser.cpp \
		xvariable-parser.cpp \
		xvariables-parser.cpp \
		xexpression-parser.cpp \
		xpredicate-parser.cpp \
		xpredicates-parser.cpp \
		xrelation-parser.cpp \
		xsemantics-type.cpp \
		xrelations-parser.cpp \
		xconstraint-parser.cpp \
		xconstraints-parser.cpp
ait_include_HEADERS =  \
		exp_func.h \
		exp_num.h \
		exp_ref.h \
		expression.h \
		domain_scanner.h \
		domain_scannerbase.h \
		domain_parser.h \
		domain_parser.ih \
		domain_parserbase.h \
		parameters_scanner.h \
		parameters_scannerbase.h \
		parameters_parser.h \
		parameters_parser.ih \
		parameters_parserbase.h \
		constraint-parameters_scanner.h \
		constraint-parameters_scannerbase.h \
		constraint-parameters_parser.h \
		constraint-parameters_parser.ih \
		constraint-parameters_parserbase.h \
		predicate-f_scanner.h \
		predicate-f_scannerbase.h \
		predicate-f_parser.h \
		predicate-f_parser.ih \
		predicate-f_parserbase.h \
		xcsp-pskel.hxx \
		xinstance-parser.h \
		xpresentation-parser.h \
		xproblem-type-parser.h \
		xdomain-parser.h \
		xdomains-parser.h \
		xvariable-parser.h \
		xvariables-parser.h \
		xexpression-parser.h \
		xpredicate-parser.h \
		xpredicates-parser.h \
		xrelation-parser.h \
		xsemantics-type.h \
		xrelations-parser.h \
		xconstraint-parser.h \
		xconstraints-parser.h
ait_libincludedir = $(libdir)/ait/include
EXTRA_DIST = *.ih
